# hot-or-not-web-leptos-ssr

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  build_for_staging.sh  default.nix  dockerfile  fly-prod.toml  fly-staging.toml  fly.toml  install-git-hooks.sh  lighthouserc.js  local-run.sh  local-test.sh  log  package-lock.json  package.json  playwright_test.js  pnpm-lock.yaml  rust-toolchain.toml  tailwind.config.js  test.toml
ssr/: Cargo.toml  build.rs  install_pwa.js  tailwind.config.js
ssr/did/: canister_ids.json  individual_user_template.did  sns_index.did
ssr/end2end/: playwright.config.ts
ssr/public/: app.webmanifest  firebase-messaging-sw.js  hotornot.json  icpump.json  pumpdump.json  share.js  yral.json
ssr/public/.well-known/: assetlinks.json
ssr/public/img/hotornot/: favicon.json  manifest.json
ssr/public/img/icpump/: manifest.json
ssr/public/img/pumpdump/: manifest.json
ssr/public/img/yral/: manifest.json
ssr/public/wasp/: wasp_hls_bg.wasm  worker.js
ssr/src/: app.rs  canister_ids.rs  error_template.rs  fallback.rs  lib.rs  main.rs
ssr/src/auth/: Cargo.toml  mod.rs
ssr/src/auth/server_impl/: google.rs  mod.rs
ssr/src/auth/src/: lib.rs
ssr/src/auth/src/server_impl/: google.rs  mod.rs
ssr/src/canister/: generated.rs
ssr/src/component/: Cargo.toml  airdrop_logo.rs  app_config.rs  back_btn.rs  base_route.rs  board_card.rs  buttons.rs  canisters_prov.rs  claim_tokens.rs  connect.rs  content_upload.rs  dashbox.rs  download_pwa_feedpopup.rs  feed_popup.rs  head.rs  hn_icons.rs  img_to_png.rs  infinite_scroller.rs  loading.rs  login_modal.rs  menu_item.rs  mod.rs  modal.rs  nav.rs  nav_icons.rs  no_more_posts.rs  onboarding_flow.rs  option.rs  overlay.rs  page_selector.rs  pumpai_icons.rs  scrolling_post_view.rs  share_popup.rs  shimmer.rs  show_any.rs  skeleton.rs  social.rs  spinner.rs  title.rs  toggle.rs  (+3 more)
ssr/src/component/auth_providers/: google.rs  local_storage.rs  mod.rs
ssr/src/component/icons/: airdrop_icon.rs  arrow_down_icon.rs  arrow_left_icon.rs  arrow_left_right_icon.rs  arrow_right_long_icon.rs  arrow_up_icon.rs  chevron_left_icon.rs  chevron_right_icon.rs  close_icon.rs  comment_icon.rs  eye_hide_icon.rs  heart_filled_icon.rs  heart_icon.rs  home_icon.rs  information_icon.rs  menu_icon.rs  mod.rs  more_icon.rs  notification_icon.rs  padlock_icon.rs  pump_ai_logo.rs  report_icon.rs  send_icon.rs  share_alt_icon.rs  share_icon.rs  user_icon.rs  wallet_icon.rs
ssr/src/component/shared/: mod.rs
ssr/src/component/shared/assets/: airdrop_logo.rs  back_btn.rs  coming_soon.rs  loading.rs  mod.rs  nav_icons.rs  onboarding_flow.rs  option.rs  profile_placeholders.rs  toggle.rs  token_confetti_symbol.rs
ssr/src/component/src/: back_btn.rs  base_route.rs  bullet_loader.rs  buttons.rs  canisters_prov.rs  coming_soon.rs  connect.rs  content_upload.rs  dashbox.rs  feed_popup.rs  hn_icons.rs  ic_symbol.rs  infinite_scroller.rs  lib.rs  loading.rs  login_modal.rs  modal.rs  nav.rs  nav_icons.rs  onboarding_flow.rs  option.rs  overlay.rs  profile_placeholders.rs  share_popup.rs  show_any.rs  skeleton.rs  social.rs  spinner.rs  token_confetti_symbol.rs  token_logo_sanitize.rs  tooltip.rs  video_player.rs
ssr/src/consts/: Cargo.toml  local.rs  mod.rs  remote.rs
ssr/src/consts/src/: lib.rs  remote.rs
ssr/src/errors/: errors.rs
ssr/src/init/: containers.rs  mod.rs
ssr/src/js/: mod.rs
ssr/src/page/: Cargo.toml  ab.rs  about_us.rs  account_help.rs  account_transfer.rs  airdrop.rs  err.rs  google_redirect.rs  leaderboard.rs  logout.rs  menu.rs  mod.rs  preview_google_redirect.rs  privacy.rs  root.rs  terms.rs  view_profile_redirect.rs
ssr/src/page/faq/: mod.rs
ssr/src/page/icpump/: ai.rs  mod.rs  pumpndump.rs  search.rs
ssr/src/page/notification/: mod.rs
ssr/src/page/notifications/: mod.rs
ssr/src/page/notifs/: mod.rs  setup-firebase-messaging.js
ssr/src/page/pnd_profile/: mod.rs
ssr/src/page/post_view/: bet.rs  mod.rs  overlay.rs  single_post.rs  video_iter.rs  video_loader.rs
ssr/src/page/profile/: ic.rs  mod.rs  overlay.rs  posts.rs  profile_iter.rs  profile_post.rs  speculation.rs  tokens.rs
ssr/src/page/pumpdump/: analytics.rs  context.rs  mod.rs  model.rs  test.rs  withdrawal.rs
ssr/src/page/refer_earn/: history.rs  mod.rs
ssr/src/page/settings/: mod.rs
ssr/src/page/src/: about_us.rs  airdrop.rs  err.rs  google_redirect.rs  leaderboard.rs  lib.rs  logout.rs  menu.rs  preview_google_redirect.rs  privacy.rs  root.rs  scrolling_post_view.rs  terms.rs  terms_ios.rs  view_profile_redirect.rs
ssr/src/page/src/faq/: mod.rs
ssr/src/page/token/: create.rs  create_token_faq.rs  info.rs  mod.rs  non_yral_tokens.rs  popups.rs  share_token_popup.rs  sns_form.rs  swap.rs  swapper.rs  token_transaction.rs  transfer.rs  txn.rs  types.rs
ssr/src/page/upload/: cf_upload.rs  mod.rs  video_upload.rs
ssr/src/page/wallet/: airdrop.rs  mod.rs  share_token_popup.rs  swap.rs  tokens.rs  transactions.rs  txn.rs
ssr/src/state/: Cargo.toml  admin_canisters.rs  app_state.rs  app_type.rs  audio_state.rs  canisters.rs  content_seed_client.rs  history.rs  local_storage.rs  mod.rs
ssr/src/state/auth/: mod.rs
ssr/src/state/src/: admin_canisters.rs  app_state.rs  app_type.rs  audio_state.rs  canisters.rs  content_seed_client.rs  history.rs  lib.rs  local_storage.rs
ssr/src/utils/: Cargo.toml  ab_testing.rs  build.rs  device_id.rs  host.rs  ic.rs  icon.rs  mod.rs  posts.rs  profile.rs  qstash.rs  report.rs  route.rs  time.rs  timestamp.rs  token.rs  types.rs  user.rs  web.rs
ssr/src/utils/event_streaming/: events.rs  mod.rs
ssr/src/utils/ml_feed/: mod.rs
ssr/src/utils/notifications/: device_id.rs  mod.rs  setup-firebase-messaging-inline.js  setup-firebase-messaging.js
ssr/src/utils/src/: ab_testing.rs  host.rs  icon.rs  lib.rs  posts.rs  profile.rs  qstash.rs  report.rs  route.rs  user.rs  web.rs
ssr/src/utils/token/: firestore.rs  icpump-firestore.js  icpump.js  icpump.rs  mod.rs  nsfw.rs  server_impl.rs
ssr/style/: animations.css  app.css  input.css
(+286 files in other folders)
