[package]
name = "hot-or-not-web-leptos-ssr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.7", optional = true, features = ["macros"] }
axum-extra = { version = "0.9.3", optional = true, features = ["cookie", "cookie-signed"] }
console_error_panic_hook = "0.1"
console_log = "1"
leptos = { version = "0.6", features = ["nightly"] }
leptos_axum = { version = "0.6", optional = true }
leptos_meta = { version = "0.6", features = ["nightly"] }
leptos_router = { version = "0.6", features = ["nightly"] }
log = "0.4"
simple_logger = "4.0"
tokio = { version = "1", optional = true, features = ["rt-multi-thread"] }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }
wasm-bindgen = "=0.2.92"
thiserror = "1.0"
tracing = { version = "0.1.37", optional = true }
http = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
candid = "0.10.3"
ic-agent = { version = "0.34.0", default-features = false, features = [
    "pem",
    "reqwest",
] }
serde-wasm-bindgen = { version = "0.6.3" }
futures = "0.3.30"
leptos-use = { version = "0.10.5", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "http2",
] }
serde_bytes = "0.11.14"
hex = "0.4.3"
leptos_icons = "0.3.0"
icondata = "0.3.0"
gloo = { version = "0.11.0", features = ["futures", "net", "net"] }
once_cell = "1.19.0"
web-time = "1.0.0"
k256 = { version = "0.13.3", default-features = false, features = [
    "std",
    "jwk",
] }
sha2 = { version = "0.10.8", optional = true }
icondata_core = "0.1.0"
serde_json = "1.0"
crc32fast = "1.4.0"
uts2ts = "0.4.1"
rand_chacha = { version = "0.3.1", optional = true }
web-sys = { version = "0.3", features = [
    "Clipboard",
    "Navigator",
    "ShareData",
    "Window",
    "Document",
    "Worker",
], optional = true }
circular-buffer = "0.1.7"
dotenv = { version = "0.15.0", optional = true }
gob-cloudflare = { git = "https://github.com/go-bazzinga/gob-cloudflare", rev = "c847ba87ecc73a33520b24bd62503420d7e23e3e", default-features = false, optional = true }
yral-auth-client = { git = "https://github.com/go-bazzinga/yral-auth", rev = "89d435add36660040e6340dc0bf3d84c458f7e5a", default-features = false }
url = "2.5.0"

gloo-utils = { version = "0.2.0", features = ["serde"] }
tonic = { version = "0.11.0", features = [
    "tls",
    "tls-webpki-roots",
], optional = true }
prost = { version = "0.12.4", optional = true }
hmac = { version = "0.12.1", optional = true }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
candid_parser = "0.1.1"
serde_json = "1.0.110"
convert_case = "0.6.0"
tonic-build = "0.11.0"

[features]
hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
    "ic-agent/wasm-bindgen",
    "dep:web-sys",
    "reqwest/native-tls",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:tracing",
    "leptos-use/ssr",
    "leptos-use/axum",
    "reqwest/rustls-tls",
    "yral-auth-client/rustls-tls",
    "dep:rand_chacha",
    "dep:dotenv",
    "tonic",
    "prost",
    "dep:axum-extra",
    "dep:hmac",
    "dep:sha2",
]
# Fetch mock referral history instead of history via canister
mock-referral-history = ["dep:rand_chacha", "k256/arithmetic"]


mock-history = ["mock-referral-history", "mock-wallet-history"]
cloudflare = ["dep:gob-cloudflare"]
backend-admin = []
ga4 = []
release-bin = [
    "ssr",
    "cloudflare",
    "gob-cloudflare/rustls-tls",
    "backend-admin",
    "ga4",
]
release-lib = [
    "hydrate",
    "cloudflare",
    "backend-admin",
    "ga4",
]

mock-wallet-history = ["dep:rand_chacha"]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "hot-or-not-leptos-ssr"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
#style-file = "style/main.scss"

# The tailwind input file.
tailwind-input-file = "style/input.css"

# The tailwind config file.
tailwind-config-file = "tailwind.config.js"

# Enables additional file hashes on outputted css, js, and wasm files
#
# Optional: Defaults to false. Can also be set with the LEPTOS_HASH_FILES=false env var
hash-files = true

# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"

