[workspace]
members = [ "sns-validation","ssr"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
candid = "0.10.3"
serde_bytes = "0.11.14"
sns-validation.path = "sns-validation"
web-time = "1.0.0"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
